complete the google auth
Here i compleete google auth and with full functions and integreate googele api and done repo test of the repo function
